--- a/style.css
+++ b/style.css
@@ -770,6 +770,10 @@ dd {
 	margin: 0 1.5em 1.5em;
 }
 
+li {
+	margin: 0 0 0.5em;
+}
+
 /* Make sure embeds and iframes fit their containers. */
 embed,
 iframe,
@@ -1535,7 +1539,6 @@ textarea {
 	height: 1px;
 	margin-left: 40px;
 	background-color: #DFDFDF;
-	max-width: 104px;
 }
 
 /* Media
@@ -1697,6 +1700,7 @@ textarea {
 	margin-right: 24px;
 	display: inline-block;
 	width: auto;
+	margin-bottom: 0;
 }
 
 @media only screen and (min-width: 1140px) {
