--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -46,3 +46,7 @@
 /* Categories List
 --------------------------------------------- */
 @import "content/pagination";
+
+/* Social Share
+--------------------------------------------- */
+@import "common/social-share";
