--- a/sass/components/comments/_comments.scss
+++ b/sass/components/comments/_comments.scss
@@ -1,7 +1,328 @@
+.c-comments {
+  width: 100%;
+  margin-top: 40px;
+
+  @include media(tablet) {
+    margin-top: 48px;
+  }
+
+  .form-submit {
+    margin: 0;
+  }
+}
+
+.comments-title {
+  margin: 0 0 8px;
+}
+
+.comments-header {
+  margin-bottom: 48px;
+
+  @include media(laptop) {
+    margin: 0 0 64px;
+  }
+}
+
+
 .comment-content a {
-	word-wrap: break-word;
+  word-wrap: break-word;
+  color: $wp-meliora__secondary-color;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 23px;
+  letter-spacing: 0.05em;
 }
 
 .bypostauthor {
-	display: block;
+  display: block;
+}
+
+.comment {
+  list-style: none;
+  padding: 0;
+  margin: 24px 0;
+
+  & > li > ol.children {
+    border-bottom: 0;
+  }
+
+  .comment-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+
+  .comment-avatar {
+    margin-right: 24px;
+    min-width: 36px;
+    min-height: 36px;
+    width: 36px;
+    height: 36px;
+
+    @include media(laptop) {
+      width: 70px;
+      height: 70px;
+      min-width: 70px;
+      min-height: 70px;
+    }
+  }
+
+  .comment-header .time, .comment-header .time * {
+    font-size: 12px;
+    color: $wp-meliora__neutral-dark-gray-color;
+    font-weight: var(--heading-typography-variant) !important;
+  }
+
+  .comment-info {
+    display: inline-block;
+    width: 70%;
+    vertical-align: middle;
+  }
+
+  .avatar {
+    vertical-align: middle;
+    margin-right: 10px;
+  }
+
+  .comment {
+    padding: 20px 10px;
+    margin: 5px 0;
+  }
+
+  .comment-meta {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .comment-metadata a * {
+    font-size: 0.813em;
+    text-decoration: none;
+    color: #888888;
+    font-weight: 400;
+  }
+
+
+  &:last-child {
+    margin-bottom: 10px;
+  }
+
+  .comment-author {
+    margin-right: 24px;
+  }
+
+  .comment-author, .comment-author a {
+    font-size: 0.8em;
+    margin-top: 0;
+    color: $wp-meliora__tertiary-color;
+
+    @include media(laptop) {
+      font-size: 1em;
+    }
+  }
+}
+
+
+ol.children {
+  list-style: none;
+  margin-top: 15px;
+  padding-left: 10px;
+  margin-left: 5px;
+
+  @include media(laptop) {
+    margin-top: 15px;
+    padding-left: 30px;
+  }
+}
+
+ol.children:last-child {
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.comment-navigation {
+  margin-bottom: 40px;
+}
+
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row nowrap;
+}
+
+.comments > .comment:first-child {
+  border-top: 0;
+}
+
+.comment-content p, .screen-reader-text.says {
+  font-weight: 400;
+}
+
+.comment-content p {
+  margin-bottom: 16px;
+  color: $wp-meliora__main-primary-light-color;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+  font-weight: var(--text-typography-variant);
+
+  a {
+    font-weight: var(--text-typography-variant);
+  }
+
+  @include media(laptop) {
+    font-size: 1rem;
+  }
+}
+
+.comment-content a {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.05em;
+
+
+  @include media(laptop) {
+    font-size: 1rem;
+  }
+}
+
+
+.comment-reply-link {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 27px;
+  text-align: center;
+  letter-spacing: 0.1em;
+  color: $wp-meliora__secondary-color;
+  transition: 0.25s;
+
+  &:hover {
+    color: $wp-meliora__primary-color;
+  }
+}
+
+
+.comment-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 64px;
+
+  @include media(laptop) {
+    margin-bottom: 96px;
+  }
+}
+
+.comment-form-author, .comment-form-email, .comment-form-url {
+  width: 100%;
+
+  label {
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5em;
+    font-weight: var(--heading-typography-variant);
+    color: $wp-meliora__secondary-color;
+  }
+
+  input {
+    max-width: 100%;
+  }
+
+  @include media(laptop) {
+    width: 30%;
+  }
+}
+
+.comment-form-cookies {
+  display: flex;
+  align-items: flex-start;
+  font-size: 14px;
+
+
+  input {
+    margin: 5px 10px 0 0;
+  }
+}
+
+.comment-form-comment {
+  width: 100%;
+  margin-top: 16px;
+  font-size: 1rem;
+  line-height: 24px;
+  font-weight: var(--heading-typography-variant);
+  color: $wp-meliora__secondary-color;
+
+  label {
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5em;
+    font-weight: var(--heading-typography-variant);
+    color: $wp-meliora__secondary-color;
+  }
+
+  @include media(laptop) {
+    margin-top: 24px;
+  }
+
+  textarea {
+    max-height: 100px;
+  }
+}
+
+.comment-form-cookies-consent {
+  display: flex;
+  align-items: flex-start;
+
+  input {
+    margin-top: 0.4em;
+	  margin-right: 0.5em;
+  }
+
+  label {
+    font-weight: normal;
+    font-size: 0.75rem;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5em;
+    font-weight: var(--heading-typography-variant);
+    color: $wp-meliora__secondary-color;
+  }
+}
+
+#cancel-comment-reply-link {
+  font-size: 0.5em;
+  margin-left: 2em;
+}
+
+.comment-edit-link {
+  margin-right: 20px;
+}
+
+.comment-reply-title {
+  font-size: 1.25em;
+  margin-bottom: 0.75em;
+}
+
+.comment-notes {
+  font-size: 0.75em;
+  font-weight: var(--text-typography-variant);
+}
+
+.form-submit {
+	width: 100%;
+
+	input, [type="submit"] {
+		font-weight: var(--heading-typography-variant);
+		padding: 16px 24px;
+		background-color: $wp-meliora__main-primary-light-color;
+		color: $wp-meliora__neutral-white;
+		border-radius: $global-radius;
+	}
 }
