--- a/sass/layouts/_no-sidebar.scss
+++ b/sass/layouts/_no-sidebar.scss
@@ -1,5 +1,60 @@
 .site.no-sidebar {
-	.sidebar {
-		display: none;
-	}
+  .sidebar {
+    display: none;
+  }
+}
+
+
+// 404 page - no sidebar
+body.error404 {
+  background-color: $wp-meliora__neutral-gray-light-color;
+}
+
+.error-404.not-found {
+  text-align: center;
+
+  @include media(laptop) {
+    max-width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .page-content p {
+    font-size: 1rem;
+    line-height: 2em;
+  }
+
+  .search-form {
+    max-width: 300px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 48px;
+
+    input {
+      background-color: $wp-meliora__neutral-white;
+    }
+  }
+
+  .not-found__actions__link {
+
+    .dashicons {
+      vertical-align: middle;
+      font-size: 1em;
+    }
+  }
+
+  .error-404__image {
+    max-width: 100%;
+  }
+
+  .not-found__error {
+    font-size: 15rem;
+    line-height: 1em;
+    margin-bottom: 24px;
+    color: $wp-meliora__neutral-white;
+    text-shadow: -2px -2px 0 $wp-meliora__neutral-gray-color,
+    2px -2px 0 $wp-meliora__neutral-gray-color,
+    -2px 2px 0 $wp-meliora__neutral-gray-color,
+    2px 2px 0 $wp-meliora__neutral-gray-color;
+  }
 }
