--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -23,7 +23,7 @@ $wp-meliora__primary-color: var(--primary-color);
 $wp-meliora__secondary-color: var(--secondary-color);
 $wp-meliora__tertiary-color: var(--tertiary-color);
 $wp-meliora__main-primary-color: #000000;
-$wp-meliora__main-primary-dark-color: #000000;
+$wp-meliora__main-primary-dark-color: #2B2B2B;
 $wp-meliora__main-primary-light-color: #474747;
 $wp-meliora__neutral-dark-gray-color: #ABABAB;
 $wp-meliora__neutral-gray-color: #DFDFDF;
