Update theme info & text domain

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,11 @@
 /*!
-Theme Name: Digital Interface
-Theme URI: http://underscores.me/
+Theme Name: WP-Meliora
+Theme URI: https://vitathemes.com/theme/wp-meliora/
 Author: VitaThemes
 Author URI: https://vitathemes.com
-Description: Just another minimal WordPress theme
+Description: A minimal & mobile-first blog theme. The best choice for people who want to start blogging as soon as possible.
 Version: 1.0.0
-Tested up to: 5.4
+Tested up to: 5.5.1
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
